# ta2025

./: .gitignore  01-Introduction.ipynb  02-01-BOW-Models.ipynb  02-02-Preprocessing.ipynb  02-03-TF-IDF.ipynb  02-04-Extractive-Summarization.ipynb  02-05-A-SVD.ipynb  02-05-Latent-Semantic-Analysis.ipynb  02-05-SVD.ipynb  02-06-Latent-Semantic-Analysis.ipynb  03-01-Word-Embeddings-Overview.ipynb  03-02-ANN-Regression.ipynb  03-03-ANN-Classification.ipynb  03-04-Word2Vec.ipynb  03-05-LSA.ipynb  04-01-Using-Word-Embeddings.ipynb  04-02-Bigram-Model.ipynb  _quarto.yml  _variables.yml  index.ipynb  index.qmd  pyproject.toml  references.bib  tensors.ipynb  tmp.ipynb  tmp1.ipynb
.github/workflows/: publish.yml
animations/: __init__.py  basis_vectors.py  dot_product_cosine.py  eigen_directions.py  image_layers.py  linear_combinations.py  rotation.py
pseudo_implementations/: eliza_pseudo.py
video_scripts/: intro.py  svd.py  triangle.py  vector_movement.py
